# yelp-fusion-rs

./: .clippy.toml  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: publish.yml  rust.yml
examples/: blocking_business_search.rs  business_search.rs
src/: error.rs  lib.rs  yelp_fusion.rs
src/endpoints/: mod.rs
src/endpoints/business/: autocomplete.rs  business_match.rs  details.rs  mod.rs  phone_search.rs  reviews.rs  search.rs  transaction_search.rs
src/endpoints/business/search/: business_search_payload.rs  business_search_payload_builder.rs  business_search_payload_error.rs  business_search_response.rs  mod.rs
src/endpoints/categories/: all.rs  details.rs  mod.rs
src/endpoints/events/: featured.rs  lookup.rs  mod.rs  search.rs
src/models/: attribute.rs  business.rs  category.rs  coordinates.rs  location.rs  mod.rs  price_type.rs  region.rs  sort_by.rs  transaction_type.rs
tests/: business_search.rs  business_search_payload.rs  business_search_payload_builder.rs
