[package]
name = "yelp-fusion-rs"
version = "0.2.1"
edition = "2021"
rust-version = "1.75"
authors = ["Todd Everett Griffin <toddgriffin@protonmail.com>"]
repository = "https://github.com/goddtriffin/yelp-fusion-rs"
homepage = "https://www.toddgriffin.me/"
description = "A Rust library for the Yelp Fusion API."
license = "MIT"
keywords = ["yelp", "fusion", "api", "http", "client"]
categories = ["web-programming", "api-bindings"]
exclude = [
    ".idea/*",
    ".github/*",
]

[lib]
path = "src/lib.rs"

[lints.rust]
unsafe_code = { level = "forbid", priority = 0 }

[lints.clippy]
use_self = { level = "allow", priority = 1 }
nursery = { level = "allow", priority = 1 }
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

[dependencies]
# tokio
tokio = { version = "1.36.0", features = ["full"] }

# http request
reqwest = { version = "0.11.24", default-features = false, features = [ "json", "rustls-tls", "blocking" ] }
bytes = "1.5.0"

# serde
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
